gcc/testsuite/rust/rustc/ui/issues/issue-3680.rs
fn main() {
    match None {
        Err(_) => ()
// { dg-error ".E0308." "" { target *-*-* } .-1 }
// { dg-error ".E0308." "" { target *-*-* } .-2 }
// { dg-error ".E0308." "" { target *-*-* } .-3 }
// { dg-error ".E0308." "" { target *-*-* } .-4 }
    }
}

